# boinc_repository

./: .gitignore  Cargo.toml  readme.md
examples/simple/: Cargo.toml  config.yaml  config_test.yaml  trace.csv
examples/simple/src/: main.rs
simulator/: Cargo.toml
simulator/src/: common.rs  lib.rs
simulator/src/client/: client.rs  mod.rs  rr_simulation.rs  scheduler.rs  stats.rs  storage.rs  task.rs  utils.rs
simulator/src/config/: sim_config.rs
simulator/src/project/: assimilator.rs  data_server.rs  db_purger.rs  feeder.rs  file_deleter.rs  job_generator.rs  mod.rs  project.rs  scheduler.rs  server.rs  stats.rs  transitioner.rs  validator.rs
simulator/src/server/: assimilator.rs  data_server.rs  database.rs  db_purger.rs  feeder.rs  file_deleter.rs  job.rs  job_generator.rs  mod.rs  scheduler.rs  server.rs  stats.rs  transitioner.rs  validator.rs
simulator/src/simulator/: dist_params.rs  mod.rs  print_stats.rs  simulator.rs
traces/lhc/: cpu_list.csv  cpu_list_raw.txt
traces/seti/: availability.csv  cpu_list.csv  hosts_power.raw  script.py
