[package]
name = "boinc-simulator"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"


[dependencies]
dslab-core = { path = "../../dslab/crates/dslab-core", features = ["async_mode"] }
dslab-compute = { path = "../../dslab/crates/dslab-compute" }
dslab-storage = { path = "../../dslab/crates/dslab-storage" }
dslab-network = { path = "../../dslab/crates/dslab-network" }

clap = { version = "3.1.12", features = ["cargo", "derive"] }
log = "0.4.14"
csv = "1.1"
env_logger = "0.9.0"
rand = "0.8.4"
rand_pcg = "0.3.1"
rand_distr = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
sugars = "3.0.0"
priority-queue = "1.2.1"
memory-stats = "1.0.0"
rustc-hash = "1.1.0"
futures = "0.3"