
[package]
name = "simple-example"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
boinc-simulator = {path = "../../simulator" }
dslab-core = { git = "https://github.com/osukhoroslov/dslab.git" }
dslab-compute = { git = "https://github.com/osukhoroslov/dslab.git" }
dslab-storage = { git = "https://github.com/osukhoroslov/dslab.git" }
dslab-network = { git = "https://github.com/osukhoroslov/dslab.git" }
clap = { version = "3.1.12", features = ["cargo", "derive"] }
log = "0.4.14"
env_logger = "0.9.0"
rand = "0.8.4"
rand_pcg = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
sugars = "3.0.0"
priority-queue = "1.2.1"
